Added sections and notes

--- a/SIGCSE2019.tex
+++ b/SIGCSE2019.tex
@@ -124,11 +124,40 @@ education, Curriculum reform, Co-construction, Wales}
 
 \section{Introduction}
 
-\section{Conclusions and Future Work}
+% can we get away with a short section like in JCE?
+\section{A Brief History of Computer Science Education in the UK}
 
+% better title for this section?
+\section{Digital Curriculum Reform in Wales}
+
+% need to be careful about duplication of this section from JCE...
+\subsection{The Welsh Education System}
+
+% ditto, but this will be expanded with more detail
+\subsection{Review of the ICT Curriculum}
+
+% key themes to add context for previous and next two sections
+\subsection{Review of the National Curriculum}
+
+% DCF as a CCR, etc
+% four main strands
+% "rethinking ICT"
+\subsection{A Digital Competence Framework}
+
+% ...but what about CS
+% Science & Technology AoLE
+\subsection{A New Approach for Computer Science}
+
+% what has happened to date, where are we in the journey?
+\section{Progress So Far}
+
+% challenges and opportunities
+% qualifications, assessment, progression
+% ITE, professional development, etc
+% can this transfer to other jurisdictions? lesson learnt?
+\section{Replicability and Looking Ahead}
 
 %\section{Acknowledgements}
-
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{SIGCSE2019} 
