--- a/SIGCSE2019.bib
+++ b/SIGCSE2019.bib
@@ -45,3 +45,45 @@
   publisher =    {Springer},
   pages =        {1-20}
 }
+
+@TECHREPORT{wgictreview:2013,
+  author = {Tom Crick and Stuart Arthur and Janet Hayward},
+  title = {{The ICT Steering Group's Report to the Welsh Government}},
+  year = {2013},
+  month = {September},
+  note = {\\Available from: \url{http://learning.wales.gov.uk/docs/learningwales/publications/131003-ict-steering-group-report-en.pdf}}
+}
+
+@InProceedings{tryfonas+crick:petra2018,
+  author =       {Theo Tryfonas and Tom Crick},
+  title =        {{Public Policy and Skills for Smart Cities: The UK Outlook}},
+  booktitle =    {{Proceedings of 11th International Conference on PErvasive Technologies Related to Assistive Environments (PETRA)}},
+  pages =        {116-117},
+  year = 	 {2018}
+}
+
+@TechReport{foresightblog:2015,
+  author = 	 {Theo Tryfonas and Tom Crick},
+  title = 	 {{What skills will we need to live in future smart cities?}},
+  institution =  {{Government Office for Science, Department for Business, Innovation \& Skills}},
+  year = 	 {2015},
+  month = 	 {August},
+  note = 	 {Available from: \url{https://www.gov.uk/government/publications/future-of-cities-smart-cities-citizenship-skills-and-the-digital-agenda}}
+}
+
+@InProceedings{simon-et-al:sigcse2018,
+  author = 	 {{Simon} and Raina Mason and Tom Crick and James H. Davenport and Ellen Murphy},
+  title = 	 {{Language Choice in Introductory Programming Courses at Australasian and UK Universities}},
+  booktitle = {{Proceedings of 49th ACM Technical Symposium on Computer Science Education (SIGCSE 2018)}},
+  year = 	 {2018},
+  pages =        {852-857}
+}
+
+@Article{murphy-et-al:programming2017,
+  author = 	 {Ellen Murphy and Tom Crick and James H. Davenport},
+  title = 	 {{An Analysis of Introductory Programming Courses at UK Universities}},
+  journal = 	 {{The Art, Science, and Engineering of Programming}},
+  year = 	 {2017},
+  volume = 	 {1(2)},
+  number = 	 {18}
+}
