--- a/SIGCSE2019.tex
+++ b/SIGCSE2019.tex
@@ -86,6 +86,10 @@ AoLE bringing together the traditional physical sciences (physics,
 chemistry and biology) along with computer science and design \&
 technology.
 
+% novel -- no one else is doing this -- cross-curricular digital
+% competencies
+% first time that any nation has given parity to DC to literacy and
+% numeracy
 In this paper, we present a developing national case study based
 around the new computer science curriculum in Wales within an
 interdisciplinary Science \& Technology AoLE and supported by a
@@ -124,38 +128,103 @@ education, Curriculum reform, Co-construction, Wales}
 
 \section{Introduction}
 
+The structure of the paper is as follows...
+
 % can we get away with a short section like in JCE?
 \section{A Brief History of Computer Science Education in the UK}
 
+Key citations~\cite{crick+sentance:2011,brown-et-al:sigcse2013,brown-et-al:toce2014,tryfonas+crick:petra2018}
+
 % better title for this section?
-\section{Digital Curriculum Reform in Wales}
+\section{Rethinking the Digital Curriculum Wales}
 
 % need to be careful about duplication of this section from JCE...
 \subsection{The Welsh Education System}
 
+Having outlined the state of education in the UK as a whole, we now
+restrict our attention to Wales. As our aim is to identify the
+requirements for effective curriculum reform in a nation or region
+which enjoys the same characteristics and challenges as Wales, we
+start by describing these characteristics. We then outline the recent
+history of education and curriculum reform with particular emphasis on
+ICT and computing.
+
 % ditto, but this will be expanded with more detail
 \subsection{Review of the ICT Curriculum}
 
+In January 2013, the Welsh Government initiated a review to consider
+the future of computer science and ICT in schools in Wales. Its
+primary thesis was that ICT in schools needed to be re-branded,
+re-engineered and made relevant to now and to the future, with
+computer science being introduced at primary school and developed over
+the course of the curriculum so that learners can progress into a
+career pathway in the sector; relevant skills, such as creative
+problem-solving, should be explicitly reflected in the curriculum; and
+revised qualifications should be developed in partnership with
+schools, higher education and industry.
+
+Key citation~\cite{wgictreview:2013}
+
 % key themes to add context for previous and next two sections
 \subsection{Review of the National Curriculum}
+
+In March 2014, Professor Graham Donaldson, a former chief inspector of
+schools in Scotland, was appointed by the Welsh Government to conduct
+an independent review of curriculum and assessment of the entire
+curriculum in Wales. This followed on from a number of previous
+national-level consultations and reviews, including the 2013 review of
+the ICT curriculum.
 
 % DCF as a CCR, etc
 % four main strands
 % "rethinking ICT"
 \subsection{A Digital Competence Framework}
 
+Reflecting the importance of digital skills, the review added digital
+competency as a new third cross-curricular responsibility, with
+literacy and numeracy.
+
 % ...but what about CS
 % Science & Technology AoLE
 \subsection{A New Approach for Computer Science}
+% Phys
+% Chem
+% Biol
+
+Key citations~\cite{crick+moller:wipsce2015,moller+crick:jce2018}
 
 % what has happened to date, where are we in the journey?
 \section{Progress So Far}
 
+% NNEST and NNEM
 % challenges and opportunities
-% qualifications, assessment, progression
+% qualifications (e.g. ICT review), assessment, progression
 % ITE, professional development, etc
 % can this transfer to other jurisdictions? lesson learnt?
 \section{Replicability and Looking Ahead}
+% DCF 10 years in the making, inside context of curriculun reform, S&T
+
+When establishing a model for viewing school computer science
+education, it is apparent that there is substantial diversity between
+school education systems (Snyder, 2012), and this can create obstacles
+when trying to understand progress made in one country and potentially
+replicate it in another (Hubwieser, 2013); this is also pertinent to
+the devolved (and diverging) educational systems of the UK.
+
+% main messages:
+
+% 1) Digital competences on par with literacy and numeracy;
+% 2) CS in an S&T context -- fourth science, link back to ICT review;
+% 3) Networks of Excellence;
+
+% 4) Practitioner-led, Pioneer model;
+
+% 5) ITE, recruitment and retention
+% professional development
+% Reform fatique and skepticism, culture, geography
+% Research-informed, pedagogy and practice
+% Balancing wider economic context -- digital economy
+
 
 %\section{Acknowledgements}
 
