--- a/SIGCSE2019.tex
+++ b/SIGCSE2019.tex
@@ -126,6 +126,8 @@ education, Curriculum reform, Co-construction, Wales}
 % anticipated impact on discussions during the conference and possible
 % future contribution to the field of computing education.
 
+% check refs from JCE paper -- esp. Wales/UK ones...
+
 \section{Introduction}
 
 The structure of the paper is as follows...
@@ -139,6 +141,8 @@ Key citations~\cite{crick+sentance:2011,brown-et-al:sigcse2013,brown-et-al:toce2
 \section{Rethinking the Digital Curriculum Wales}
 
 % need to be careful about duplication of this section from JCE...
+% maybe not have this as loads of sub-sections like the JCE paper --
+% shorter, tighter narrative and then push more into the S&T and later sections.
 \subsection{The Welsh Education System}
 
 Having outlined the state of education in the UK as a whole, we now
@@ -184,6 +188,11 @@ Reflecting the importance of digital skills, the review added digital
 competency as a new third cross-curricular responsibility, with
 literacy and numeracy.
 
+List the main strands and sub-strands, ref docs and justification,
+etc. Headline outcome from the 
+
+% rethinking "digital" and ICT
+
 % ...but what about CS
 % Science & Technology AoLE
 \subsection{A New Approach for Computer Science}
@@ -198,6 +207,8 @@ Key citations~\cite{crick+moller:wipsce2015,moller+crick:jce2018}
 
 % NNEST and NNEM
 % challenges and opportunities
+% misunderstanding of "digital" and perceptions of ICT, etc --
+% e.g. replacing ICT curric. with DCF. Cross-curric challenges.
 % qualifications (e.g. ICT review), assessment, progression
 % ITE, professional development, etc
 % can this transfer to other jurisdictions? lesson learnt?
